# dave

examples/dave_demo_launch/launch/: dave_bathymetry_demo.launch
gazebo/dave_gazebo_bathymetry_misc/: merry_go_round.py
gazebo/dave_gazebo_bathymetry_misc/GPSViewer/: CMakeLists.txt  package.xml
gazebo/dave_gazebo_bathymetry_misc/GPSViewer/launch/: gps_map_viewer.launch
gazebo/dave_gazebo_bathymetry_misc/GPSViewer/nodes/: gps_map_viewer.py
gazebo/dave_gazebo_world_plugins/: CMakeLists.txt
models/dave_bathymetry_models/: package.xml
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.815_-121.805_36.790_36.800.epsg3857/: model.config  model.sdf
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.815_-121.805_36.790_36.800.epsg3857/materials/scripts/: texture.material
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.815_-121.805_36.800_36.810.epsg3857/: model.config  model.sdf
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.815_-121.805_36.800_36.810.epsg3857/materials/scripts/: texture.material
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.825_-121.815_36.790_36.800.epsg3857/: model.config  model.sdf
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.825_-121.815_36.790_36.800.epsg3857/materials/scripts/: texture.material
models/dave_bathymetry_models/MontereyBay/MontereyBay.R_-121.825_-121.815_36.800_36.810.epsg3857/: model.config  model.sdf
models/dave_worlds/worlds/: dave_bathymetry_demo.world
urdf/robots/rexrov_description/urdf/: rexrov_oberon7_bathymetry.xacro
(+1 files in other folders)
