<?xml version="1.0"?>
<package format="2">
  <name>gps_map_viewer</name>
  <version>0.0.0</version>
  <description> GPS viewer with bathymetry textures using Google Earth API and GEBCO2021 Map </description>
  <maintainer email="woensug.choi@gmail.com">Woensug Choi</maintainer>
  <license>TODO</license>

  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
